--- a/_posts/2018-12-06-aiqiyi.md
+++ b/_posts/2018-12-06-aiqiyi.md
@@ -3,10 +3,10 @@ layout: post
 title: 爱奇艺 5G 边缘云
 subtitle: 订购请洽：sales@nomanland.tech
 categories: aiqiyi
-tags: [aiqiyi]
+tags: [边缘云]
 ---
 
-# 产品简介:
+### 产品简介:
 
 OTT CDN，如爱奇艺、腾讯、阿里等CDN节点已经下沉到地市，如果移动网关还在骨干网位置，会导致传输浪费和 体验不佳，MEC部署到地市，可进一步降低传输迂回，降低时延，提升用户体验。
 
