--- a/_posts/2018-12-06-aiqiyi.md
+++ b/_posts/2018-12-06-aiqiyi.md
@@ -3,6 +3,14 @@ layout: post
 title: 爱奇艺 5G 边缘云
 subtitle: 订购请洽：sales@nomanland.tech
 categories: aiqiyi
+banner:
+  image: assets/images/StockSnap_C0TIJJ6L3K.jpg
+  opacity: 0.618
+  background: "#000"
+  height: "100vh"
+  min_height: "38vh"
+  heading_style: "font-size: 4.25em; font-weight: bold; text-decoration: underline"
+  subheading_style: "color: gold"
 tags: [边缘云]
 ---
 
